# starter-cpp

./: .gitignore  .markdownlint.yaml  CMakeLists.txt  README.md  get-gtest.sh
src/: .clang-format
src/console/: main.cpp
src/domain/: fun.cpp  fun.h
src/test/: helpers.h  t_fun.cpp
